@@ -1,3 +1,8 @@
+2006-06-23  Sergey Udaltsov <svu@gnome.org>
+
+	* Makefile.am, activate-settings-daemon.c: g-s-d activation is based
+	on DBUS now.
+
 2006-03-29  Arjan Timmerman <arjani@soulfly.nl>
 
 	Fixes #334153
